[gd_scene load_steps=10 format=2]

[ext_resource path="res://models/coincrate/Base.material" type="Material" id=1]
[ext_resource path="res://models/coincrate/Coin.material" type="Material" id=2]
[ext_resource path="res://scenes/entities/explosions/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/entities/coincrate/CoinCrate.gd" type="Script" id=4]
[ext_resource path="res://sounds/use-powerup.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Rotate"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 180 ), Vector3( 0, 0, 360 ) ]
}

[sub_resource type="BoxShape" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "coincrate_Cube001"
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2, 2 ),
"array_data": PoolByteArray( 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 63, 193, 193, 193, 95, 193, 58, 218, 59, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 63, 214, 214, 193, 95, 193, 58, 218, 59, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 63, 0, 193, 0, 95, 0, 0, 47, 57, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 63, 66, 129, 60, 126, 184, 59, 0, 60, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 63, 66, 196, 196, 30, 193, 58, 85, 57, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 63, 193, 0, 0, 127, 189, 36, 47, 57, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 63, 214, 214, 193, 95, 220, 58, 0, 60, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 63, 0, 193, 0, 95, 189, 36, 47, 57, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 63, 0, 66, 66, 126, 189, 36, 47, 57, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 63, 66, 0, 0, 126, 189, 36, 47, 57, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 63, 193, 193, 193, 95, 246, 58, 218, 59, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 63, 193, 0, 0, 127, 189, 36, 9, 57, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 63, 129, 66, 190, 63, 184, 59, 85, 57, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 63, 196, 66, 190, 33, 193, 58, 85, 57, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 63, 214, 214, 193, 95, 246, 58, 218, 59, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 63, 193, 0, 0, 126, 161, 53, 47, 57, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 63, 214, 42, 63, 95, 220, 58, 9, 57, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 63, 0, 190, 0, 93, 161, 53, 47, 57, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 63, 0, 63, 63, 127, 161, 53, 47, 57, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 63, 66, 0, 0, 127, 161, 53, 47, 57, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 63, 193, 63, 63, 95, 246, 58, 227, 56, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 63, 214, 42, 63, 95, 246, 58, 227, 56, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 63, 66, 127, 0, 96, 222, 59, 85, 57, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 63, 0, 63, 63, 127, 237, 53, 47, 57, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 63, 66, 60, 196, 96, 146, 59, 85, 53, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 63, 193, 63, 63, 95, 193, 58, 227, 56, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 63, 193, 0, 0, 126, 161, 53, 9, 57, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 63, 129, 66, 190, 63, 184, 59, 85, 53, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 63, 196, 190, 190, 93, 95, 59, 0, 60, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 63, 214, 42, 63, 95, 193, 58, 227, 56, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 191, 193, 193, 193, 95, 193, 58, 47, 57, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 191, 172, 172, 193, 95, 193, 58, 47, 57, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 191, 63, 129, 63, 127, 0, 0, 227, 56, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 191, 0, 196, 0, 96, 237, 53, 0, 0, 102, 102, 102, 191, 0, 0, 128, 191, 102, 102, 102, 191, 66, 196, 196, 30, 193, 58, 85, 53, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 191, 193, 193, 193, 95, 246, 58, 47, 57, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 191, 129, 63, 0, 127, 189, 36, 9, 57, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 191, 196, 0, 130, 93, 208, 54, 0, 0, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 191, 196, 66, 190, 33, 193, 58, 0, 60, 0, 0, 128, 191, 102, 102, 102, 191, 102, 102, 102, 191, 172, 172, 193, 95, 246, 58, 47, 57, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 191, 129, 63, 0, 127, 189, 36, 227, 56, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 191, 172, 172, 193, 95, 220, 58, 9, 57, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 191, 63, 129, 63, 127, 189, 36, 227, 56, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 191, 60, 127, 0, 93, 189, 36, 227, 56, 102, 102, 102, 191, 102, 102, 102, 191, 0, 0, 128, 191, 127, 60, 0, 127, 189, 36, 227, 56, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 191, 193, 63, 63, 95, 246, 58, 113, 52, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 191, 172, 84, 63, 95, 246, 58, 113, 52, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 191, 0, 60, 196, 126, 132, 54, 0, 0, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 191, 63, 127, 0, 95, 237, 53, 227, 56, 102, 102, 102, 191, 0, 0, 128, 63, 102, 102, 102, 191, 66, 60, 196, 96, 146, 59, 85, 57, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 191, 129, 63, 0, 127, 161, 53, 227, 56, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 191, 172, 84, 63, 95, 220, 58, 37, 52, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 191, 60, 129, 66, 126, 161, 53, 227, 56, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 191, 63, 127, 0, 95, 161, 53, 227, 56, 102, 102, 102, 191, 102, 102, 102, 63, 0, 0, 128, 191, 127, 60, 0, 127, 161, 53, 227, 56, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 191, 193, 63, 63, 95, 193, 58, 113, 52, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 191, 129, 63, 0, 127, 161, 53, 9, 57, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 191, 196, 0, 130, 93, 208, 54, 85, 53, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 191, 196, 190, 190, 93, 95, 59, 85, 57, 0, 0, 128, 191, 102, 102, 102, 63, 102, 102, 102, 191, 172, 84, 63, 95, 193, 58, 113, 52, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 63, 190, 196, 60, 30, 95, 59, 85, 53, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 63, 0, 193, 0, 95, 0, 0, 218, 59, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 63, 66, 129, 196, 126, 184, 59, 85, 57, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 63, 42, 214, 63, 95, 246, 58, 47, 57, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 63, 63, 193, 63, 95, 246, 58, 47, 57, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 63, 42, 214, 63, 95, 44, 59, 47, 57, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 63, 60, 66, 66, 33, 146, 59, 0, 60, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 63, 127, 66, 66, 63, 28, 55, 0, 0, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 63, 63, 0, 0, 127, 189, 36, 0, 60, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 63, 63, 193, 63, 95, 44, 59, 47, 57, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 63, 190, 0, 0, 127, 189, 36, 218, 59, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 63, 0, 193, 0, 95, 189, 36, 218, 59, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 63, 0, 66, 66, 126, 189, 36, 218, 59, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 63, 42, 214, 63, 95, 17, 59, 9, 57, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 63, 63, 0, 0, 127, 189, 36, 218, 59, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 63, 190, 60, 60, 96, 219, 56, 85, 57, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 63, 66, 127, 0, 96, 222, 59, 85, 53, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 63, 0, 63, 63, 127, 237, 53, 218, 59, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 63, 42, 42, 193, 95, 44, 59, 113, 52, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 63, 63, 63, 193, 95, 44, 59, 113, 52, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 63, 190, 0, 0, 127, 161, 53, 218, 59, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 63, 0, 190, 0, 93, 161, 53, 218, 59, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 63, 0, 63, 63, 127, 161, 53, 218, 59, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 63, 42, 42, 193, 95, 17, 59, 37, 52, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 63, 63, 0, 0, 127, 161, 53, 218, 59, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 63, 42, 42, 193, 95, 246, 58, 113, 52, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 63, 60, 190, 66, 93, 219, 56, 85, 57, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 63, 127, 66, 66, 63, 28, 55, 85, 53, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 63, 63, 0, 0, 127, 161, 53, 0, 60, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 63, 63, 63, 193, 95, 246, 58, 113, 52, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 191, 190, 196, 60, 30, 95, 59, 85, 57, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 191, 63, 129, 63, 127, 0, 0, 113, 52, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 191, 0, 196, 0, 96, 237, 53, 85, 53, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 191, 84, 172, 63, 95, 246, 58, 218, 59, 102, 102, 102, 63, 0, 0, 128, 191, 102, 102, 102, 191, 63, 193, 63, 95, 246, 58, 218, 59, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 191, 129, 60, 0, 126, 189, 36, 113, 52, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 191, 63, 129, 63, 127, 189, 36, 113, 52, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 191, 60, 127, 0, 93, 189, 36, 113, 52, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 191, 84, 172, 63, 95, 17, 59, 0, 60, 102, 102, 102, 63, 102, 102, 102, 191, 0, 0, 128, 191, 127, 63, 0, 127, 189, 36, 113, 52, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 191, 84, 172, 63, 95, 44, 59, 218, 59, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 191, 60, 66, 66, 33, 146, 59, 85, 57, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 191, 60, 0, 126, 33, 184, 59, 0, 60, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 191, 127, 63, 0, 127, 189, 36, 37, 52, 0, 0, 128, 63, 102, 102, 102, 191, 102, 102, 102, 191, 63, 193, 63, 95, 44, 59, 218, 59, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 191, 190, 60, 60, 96, 219, 56, 85, 53, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 191, 0, 60, 60, 126, 132, 54, 85, 53, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 191, 63, 127, 0, 95, 237, 53, 113, 52, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 191, 84, 84, 193, 95, 44, 59, 227, 56, 102, 102, 102, 63, 0, 0, 128, 63, 102, 102, 102, 191, 63, 63, 193, 95, 44, 59, 227, 56, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 191, 84, 84, 193, 95, 246, 58, 227, 56, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 191, 60, 190, 66, 93, 219, 56, 0, 60, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 191, 60, 0, 126, 93, 184, 59, 85, 57, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 191, 127, 63, 0, 126, 161, 53, 37, 52, 0, 0, 128, 63, 102, 102, 102, 63, 102, 102, 102, 191, 63, 63, 193, 95, 246, 58, 227, 56, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 191, 129, 60, 0, 127, 161, 53, 113, 52, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 191, 60, 129, 190, 126, 161, 53, 113, 52, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 191, 63, 127, 0, 95, 161, 53, 113, 52, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 191, 84, 84, 193, 95, 17, 59, 9, 57, 102, 102, 102, 63, 102, 102, 102, 63, 0, 0, 128, 191, 127, 63, 0, 126, 161, 53, 113, 52, 40, 92, 79, 191, 102, 102, 102, 191, 40, 92, 79, 191, 0, 196, 0, 96, 56, 54, 68, 36, 40, 92, 79, 191, 102, 102, 102, 191, 40, 92, 79, 191, 66, 196, 196, 30, 142, 58, 153, 53, 40, 92, 79, 191, 102, 102, 102, 191, 40, 92, 79, 63, 66, 129, 60, 126, 222, 59, 221, 59, 40, 92, 79, 191, 102, 102, 102, 191, 40, 92, 79, 63, 66, 196, 196, 30, 142, 58, 51, 57, 102, 102, 102, 191, 40, 92, 79, 191, 40, 92, 79, 63, 129, 66, 190, 63, 146, 59, 51, 57, 102, 102, 102, 191, 40, 92, 79, 191, 40, 92, 79, 63, 196, 66, 190, 33, 142, 58, 119, 57, 102, 102, 102, 191, 40, 92, 79, 191, 40, 92, 79, 191, 196, 0, 130, 93, 132, 54, 68, 36, 102, 102, 102, 191, 40, 92, 79, 191, 40, 92, 79, 191, 196, 66, 190, 33, 142, 58, 221, 59, 40, 92, 79, 191, 40, 92, 79, 191, 102, 102, 102, 63, 0, 66, 66, 126, 128, 40, 81, 57, 40, 92, 79, 191, 40, 92, 79, 191, 102, 102, 102, 63, 66, 0, 0, 126, 128, 40, 81, 57, 40, 92, 79, 191, 40, 92, 79, 63, 102, 102, 102, 63, 0, 190, 0, 93, 92, 53, 81, 57, 40, 92, 79, 191, 40, 92, 79, 63, 102, 102, 102, 63, 66, 0, 0, 127, 92, 53, 81, 57, 102, 102, 102, 191, 40, 92, 79, 63, 40, 92, 79, 63, 129, 66, 190, 63, 146, 59, 153, 53, 102, 102, 102, 191, 40, 92, 79, 63, 40, 92, 79, 63, 196, 190, 190, 93, 44, 59, 221, 59, 40, 92, 79, 191, 102, 102, 102, 63, 40, 92, 79, 63, 66, 127, 0, 96, 184, 59, 51, 57, 40, 92, 79, 191, 102, 102, 102, 63, 40, 92, 79, 63, 66, 60, 196, 96, 95, 59, 153, 53, 40, 92, 79, 191, 102, 102, 102, 63, 40, 92, 79, 191, 0, 60, 196, 126, 56, 54, 68, 36, 40, 92, 79, 191, 102, 102, 102, 63, 40, 92, 79, 191, 66, 60, 196, 96, 95, 59, 51, 57, 102, 102, 102, 191, 40, 92, 79, 63, 40, 92, 79, 191, 196, 0, 130, 93, 132, 54, 17, 53, 102, 102, 102, 191, 40, 92, 79, 63, 40, 92, 79, 191, 196, 190, 190, 93, 44, 59, 119, 57, 40, 92, 79, 191, 40, 92, 79, 63, 102, 102, 102, 191, 60, 129, 66, 126, 92, 53, 193, 56, 40, 92, 79, 191, 40, 92, 79, 63, 102, 102, 102, 191, 127, 60, 0, 127, 92, 53, 193, 56, 40, 92, 79, 191, 40, 92, 79, 191, 102, 102, 102, 191, 60, 127, 0, 93, 128, 40, 193, 56, 40, 92, 79, 191, 40, 92, 79, 191, 102, 102, 102, 191, 127, 60, 0, 127, 128, 40, 193, 56, 40, 92, 79, 63, 102, 102, 102, 191, 40, 92, 79, 191, 190, 196, 60, 30, 44, 59, 51, 57, 40, 92, 79, 63, 102, 102, 102, 191, 40, 92, 79, 191, 0, 196, 0, 96, 56, 54, 17, 53, 40, 92, 79, 63, 40, 92, 79, 191, 102, 102, 102, 191, 129, 60, 0, 126, 128, 40, 182, 52, 40, 92, 79, 63, 40, 92, 79, 191, 102, 102, 102, 191, 60, 127, 0, 93, 128, 40, 182, 52, 40, 92, 79, 63, 102, 102, 102, 63, 40, 92, 79, 191, 190, 60, 60, 96, 168, 56, 153, 53, 40, 92, 79, 63, 102, 102, 102, 63, 40, 92, 79, 191, 0, 60, 60, 126, 56, 54, 17, 53, 40, 92, 79, 63, 40, 92, 79, 63, 102, 102, 102, 191, 129, 60, 0, 127, 92, 53, 182, 52, 40, 92, 79, 63, 40, 92, 79, 63, 102, 102, 102, 191, 60, 129, 190, 126, 92, 53, 182, 52, 102, 102, 102, 63, 40, 92, 79, 63, 40, 92, 79, 191, 60, 190, 66, 93, 168, 56, 221, 59, 102, 102, 102, 63, 40, 92, 79, 63, 40, 92, 79, 191, 60, 0, 126, 93, 146, 59, 119, 57, 102, 102, 102, 63, 40, 92, 79, 191, 40, 92, 79, 191, 60, 66, 66, 33, 95, 59, 119, 57, 102, 102, 102, 63, 40, 92, 79, 191, 40, 92, 79, 191, 60, 0, 126, 33, 146, 59, 221, 59, 40, 92, 79, 63, 102, 102, 102, 191, 40, 92, 79, 63, 190, 196, 60, 30, 44, 59, 153, 53, 40, 92, 79, 63, 102, 102, 102, 191, 40, 92, 79, 63, 66, 129, 196, 126, 222, 59, 119, 57, 102, 102, 102, 63, 40, 92, 79, 191, 40, 92, 79, 63, 60, 66, 66, 33, 95, 59, 221, 59, 102, 102, 102, 63, 40, 92, 79, 191, 40, 92, 79, 63, 127, 66, 66, 63, 208, 54, 68, 36, 40, 92, 79, 63, 102, 102, 102, 63, 40, 92, 79, 63, 190, 60, 60, 96, 168, 56, 51, 57, 40, 92, 79, 63, 102, 102, 102, 63, 40, 92, 79, 63, 66, 127, 0, 96, 184, 59, 153, 53, 102, 102, 102, 63, 40, 92, 79, 63, 40, 92, 79, 63, 60, 190, 66, 93, 168, 56, 119, 57, 102, 102, 102, 63, 40, 92, 79, 63, 40, 92, 79, 63, 127, 66, 66, 63, 208, 54, 17, 53, 40, 92, 79, 63, 40, 92, 79, 63, 102, 102, 102, 63, 190, 0, 0, 127, 92, 53, 183, 59, 40, 92, 79, 63, 40, 92, 79, 63, 102, 102, 102, 63, 0, 190, 0, 93, 92, 53, 183, 59, 40, 92, 79, 63, 40, 92, 79, 191, 102, 102, 102, 63, 190, 0, 0, 127, 128, 40, 183, 59, 40, 92, 79, 63, 40, 92, 79, 191, 102, 102, 102, 63, 0, 66, 66, 126, 128, 40, 183, 59 ),
"array_index_data": PoolByteArray( 8, 0, 167, 0, 72, 0, 8, 0, 128, 0, 167, 0, 44, 0, 141, 0, 54, 0, 44, 0, 143, 0, 141, 0, 115, 0, 146, 0, 95, 0, 115, 0, 150, 0, 146, 0, 62, 0, 122, 0, 3, 0, 62, 0, 157, 0, 122, 0, 28, 0, 139, 0, 58, 0, 28, 0, 133, 0, 139, 0, 1, 0, 14, 0, 6, 0, 16, 0, 29, 0, 21, 0, 31, 0, 41, 0, 39, 0, 46, 0, 59, 0, 51, 0, 63, 0, 73, 0, 65, 0, 78, 0, 85, 0, 83, 0, 93, 0, 100, 0, 98, 0, 108, 0, 118, 0, 110, 0, 30, 0, 10, 0, 0, 0, 30, 0, 35, 0, 10, 0, 5, 0, 26, 0, 15, 0, 5, 0, 11, 0, 26, 0, 20, 0, 55, 0, 45, 0, 20, 0, 25, 0, 55, 0, 50, 0, 36, 0, 40, 0, 50, 0, 56, 0, 36, 0, 91, 0, 42, 0, 32, 0, 91, 0, 96, 0, 42, 0, 48, 0, 117, 0, 107, 0, 48, 0, 53, 0, 117, 0, 113, 0, 99, 0, 103, 0, 113, 0, 119, 0, 99, 0, 64, 0, 104, 0, 94, 0, 64, 0, 69, 0, 104, 0, 109, 0, 89, 0, 79, 0, 109, 0, 114, 0, 89, 0, 84, 0, 68, 0, 74, 0, 84, 0, 88, 0, 68, 0, 2, 0, 71, 0, 61, 0, 2, 0, 7, 0, 71, 0, 77, 0, 18, 0, 23, 0, 77, 0, 82, 0, 18, 0, 102, 0, 153, 0, 112, 0, 102, 0, 155, 0, 153, 0, 90, 0, 156, 0, 60, 0, 90, 0, 144, 0, 156, 0, 57, 0, 126, 0, 37, 0, 57, 0, 138, 0, 126, 0, 22, 0, 161, 0, 76, 0, 22, 0, 134, 0, 161, 0, 4, 0, 121, 0, 34, 0, 4, 0, 123, 0, 121, 0, 66, 0, 154, 0, 101, 0, 66, 0, 158, 0, 154, 0, 33, 0, 145, 0, 92, 0, 33, 0, 120, 0, 145, 0, 81, 0, 130, 0, 17, 0, 81, 0, 165, 0, 130, 0, 38, 0, 125, 0, 13, 0, 38, 0, 127, 0, 125, 0, 75, 0, 148, 0, 105, 0, 75, 0, 160, 0, 148, 0, 97, 0, 142, 0, 43, 0, 97, 0, 147, 0, 142, 0, 19, 0, 129, 0, 9, 0, 19, 0, 131, 0, 129, 0, 111, 0, 162, 0, 86, 0, 111, 0, 152, 0, 162, 0, 106, 0, 136, 0, 47, 0, 106, 0, 149, 0, 136, 0, 12, 0, 132, 0, 27, 0, 12, 0, 124, 0, 132, 0, 70, 0, 164, 0, 80, 0, 70, 0, 166, 0, 164, 0, 52, 0, 151, 0, 116, 0, 52, 0, 140, 0, 151, 0, 49, 0, 135, 0, 24, 0, 49, 0, 137, 0, 135, 0, 87, 0, 159, 0, 67, 0, 87, 0, 163, 0, 159, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 240,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 168
}
surfaces/1 = {
"aabb": AABB( -0.9, -0.9, -0.9, 1.8, 1.8, 1.8 ),
"array_data": PoolByteArray( 40, 92, 79, 191, 102, 102, 102, 191, 40, 92, 79, 191, 0, 129, 129, 63, 153, 59, 102, 42, 40, 92, 79, 191, 102, 102, 102, 191, 40, 92, 79, 63, 0, 129, 129, 63, 153, 59, 153, 59, 102, 102, 102, 191, 40, 92, 79, 191, 40, 92, 79, 63, 129, 0, 0, 63, 153, 59, 153, 59, 102, 102, 102, 191, 40, 92, 79, 191, 40, 92, 79, 191, 129, 0, 0, 63, 102, 42, 153, 59, 40, 92, 79, 191, 40, 92, 79, 191, 102, 102, 102, 63, 0, 0, 127, 63, 102, 42, 153, 59, 40, 92, 79, 191, 40, 92, 79, 63, 102, 102, 102, 63, 0, 0, 127, 63, 102, 42, 102, 42, 102, 102, 102, 191, 40, 92, 79, 63, 40, 92, 79, 63, 129, 0, 0, 63, 153, 59, 102, 42, 40, 92, 79, 191, 102, 102, 102, 63, 40, 92, 79, 63, 0, 127, 127, 63, 102, 42, 153, 59, 40, 92, 79, 191, 102, 102, 102, 63, 40, 92, 79, 191, 0, 127, 127, 63, 102, 42, 102, 42, 102, 102, 102, 191, 40, 92, 79, 63, 40, 92, 79, 191, 129, 0, 0, 63, 102, 42, 102, 42, 40, 92, 79, 191, 40, 92, 79, 63, 102, 102, 102, 191, 127, 127, 129, 63, 153, 59, 102, 42, 40, 92, 79, 191, 40, 92, 79, 191, 102, 102, 102, 191, 127, 127, 129, 63, 153, 59, 153, 59, 40, 92, 79, 63, 102, 102, 102, 191, 40, 92, 79, 191, 0, 129, 129, 63, 102, 42, 102, 42, 40, 92, 79, 63, 40, 92, 79, 191, 102, 102, 102, 191, 127, 127, 129, 63, 102, 42, 153, 59, 40, 92, 79, 63, 102, 102, 102, 63, 40, 92, 79, 191, 0, 127, 127, 63, 153, 59, 102, 42, 40, 92, 79, 63, 40, 92, 79, 63, 102, 102, 102, 191, 127, 127, 129, 63, 102, 42, 102, 42, 102, 102, 102, 63, 40, 92, 79, 63, 40, 92, 79, 191, 127, 0, 127, 127, 153, 59, 102, 42, 102, 102, 102, 63, 40, 92, 79, 191, 40, 92, 79, 191, 127, 0, 127, 127, 153, 59, 153, 59, 40, 92, 79, 63, 102, 102, 102, 191, 40, 92, 79, 63, 0, 129, 129, 63, 102, 42, 153, 59, 102, 102, 102, 63, 40, 92, 79, 191, 40, 92, 79, 63, 127, 0, 127, 127, 102, 42, 153, 59, 40, 92, 79, 63, 102, 102, 102, 63, 40, 92, 79, 63, 0, 127, 127, 63, 153, 59, 153, 59, 102, 102, 102, 63, 40, 92, 79, 63, 40, 92, 79, 63, 127, 0, 127, 127, 102, 42, 102, 42, 40, 92, 79, 63, 40, 92, 79, 63, 102, 102, 102, 63, 0, 0, 127, 63, 153, 59, 102, 42, 40, 92, 79, 63, 40, 92, 79, 191, 102, 102, 102, 63, 0, 0, 127, 63, 153, 59, 153, 59 ),
"array_index_data": PoolByteArray( 23, 0, 5, 0, 22, 0, 23, 0, 4, 0, 5, 0, 17, 0, 21, 0, 16, 0, 17, 0, 19, 0, 21, 0, 14, 0, 7, 0, 8, 0, 14, 0, 20, 0, 7, 0, 2, 0, 9, 0, 6, 0, 2, 0, 3, 0, 9, 0, 11, 0, 15, 0, 10, 0, 11, 0, 13, 0, 15, 0, 0, 0, 18, 0, 12, 0, 0, 0, 1, 0, 18, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[node name="CoinCrate" type="RigidBody" groups=["coincrates"]]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
mode = 1
can_sleep = false
script = ExtResource( 4 )
speed = 2.0

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Rotate"
anims/RESET = SubResource( 3 )
anims/Rotate = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="CoinCrate" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null
material/1 = null

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
